[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "deep-translator==1.11.4",
    "feedparser==6.0.11",
    "googletrans>=4.0.2",
    "langdetect>=1.0.9",
    "requests==2.32.3",
    "schedule==1.2.2",
    "telegram>=0.0.1",
    "translate>=3.6.1",
]
